--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^5.0.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.21.3",
