--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.5",
+    "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
+    "html-react-parser": "^5.1.8",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
