--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.15.12",
     "axios": "^1.6.7",
     "html-react-parser": "^5.1.8",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
