--- a/admin/.env
+++ b/admin/.env
@@ -3,4 +3,4 @@ REACT_APP_BACKEND_URL=http://localhost:8080
 REACT_APP_NODE_ENV=production
 REACT_APP_TOKEN_SECRET_KEY=codelab-eternalgame
 REACT_APP_VERSION=v1.0.0
-REACT_APP_WEB_NAME=Eternal Game
+REACT_APP_WEB_NAME="Eternal Game"
