--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -26,6 +27,7 @@
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "speakeasy": "^2.0.0",
+    "unzipper": "^0.11.4",
     "uuid": "^9.0.0"
   }
 }
