--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-full-screen": "^1.1.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.0.5",
     "tailwind": "^4.0.0"
   },
