--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-full-screen": "^1.1.1",
+    "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-spinners": "^0.13.8",
