--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
+    "@next/third-parties": "^14.2.3",
     "axios": "^1.6.7",
     "html-react-parser": "^5.1.8",
     "moment": "^2.30.1",
-    "next": "^14.1.0",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-full-screen": "^1.1.1",
