--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-#NEXT_PUBLIC_API_URL=https://api.eternalgames.io
-NEXT_PUBLIC_API_URL= http://localhost:5050
+NEXT_PUBLIC_API_URL=https://api.eternalgames.io
+#NEXT_PUBLIC_API_URL= http://localhost:5050
