--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,13 @@
     "html-react-parser": "^5.1.8",
     "moment": "^2.30.1",
     "next": "^14.2.4",
+    "next-share": "^0.27.0",
     "react": "^18",
     "react-dom": "^18",
     "react-full-screen": "^1.1.1",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-share-social": "^0.1.60",
     "react-spinners": "^0.13.8",
     "swiper": "^11.0.5",
     "tailwind": "^4.0.0"
